--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.wilder.blabla_wild.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name="com.example.wilder.blabla_wild.SearchItineraryActivity"
+            android:label="@string/search_text">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="fr.wcs.BlablaWild.SearchItineraryActivity" android:label="@string/search_text" />
-        <activity android:name="fr.wcs.BlablaWild.ViewSearchItineraryResultListActivity"></activity>
+        <activity android:name="com.example.wilder.blabla_wild.ViewSearchActivityResult2"></activity>
     </application>
 
 </manifest>
