--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.wilder.blabla_wild.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name="com.example.wilder.blabla_wild.SearchItineraryActivity"
-            android:label="@string/search_text">
-
-        </activity>
-        <activity android:name="com.example.wilder.blabla_wild.ViewSearchActivityResult2"></activity>
+            android:name=".SearchItineraryActivity"
+            android:label="@string/search_text"></activity>
+        <activity android:name=".ViewSearchResult2Activity" />
+        <activity android:name=".SubmitItineraryActivity"></activity>
     </application>
 
 </manifest>
